// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createSession should create a new session 1`] = `
Session {
  "_accountId": null,
  "_agent": Object {
    "browser": "browser",
    "geoIp": "geoIp",
    "os": "os",
    "platform": "platform",
    "source": "source",
    "version": "version",
  },
  "_authenticated": false,
  "_authorization": Object {
    "codeChallenge": "codeChallenge",
    "codeMethod": "codeMethod",
    "deviceChallenge": "deviceChallenge",
    "email": "subject",
    "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
    "otpCode": "encryptSessionOTP",
    "redirectUri": "redirectUri",
    "responseType": "responseType",
  },
  "_clientId": "client-id",
  "_created": 2020-01-01T07:00:00.000Z,
  "_deviceId": "deviceId",
  "_events": Array [],
  "_expires": 2020-01-01T07:00:00.000Z,
  "_grantType": "grantType",
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_refreshId": null,
  "_scope": "scope",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;

exports[`createSession should create a new session without optional values 1`] = `
Session {
  "_accountId": null,
  "_agent": Object {
    "browser": "browser",
    "geoIp": "geoIp",
    "os": "os",
    "platform": "platform",
    "source": "source",
    "version": "version",
  },
  "_authenticated": false,
  "_authorization": Object {
    "codeChallenge": "codeChallenge",
    "codeMethod": "codeMethod",
    "deviceChallenge": null,
    "email": "subject",
    "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
    "otpCode": null,
    "redirectUri": "redirectUri",
    "responseType": "responseType",
  },
  "_clientId": "client-id",
  "_created": 2020-01-01T07:00:00.000Z,
  "_deviceId": "deviceId",
  "_events": Array [],
  "_expires": 2020-01-01T07:00:00.000Z,
  "_grantType": "grantType",
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_refreshId": null,
  "_scope": "scope",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;
